// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Output Snapshots > Error Messages > mcp add non-existent server error matches snapshot 1`] = `
"node:internal/modules/esm/resolve:275
    throw new ERR_MODULE_NOT_FOUND(
          ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/Users/baranovxyz/oss/agentsync/dist/core/errors' imported from /Users/baranovxyz/oss/agentsync/dist/core/audit.js
    at finalizeResolution (node:internal/modules/esm/resolve:275:11)
    at moduleResolve (node:internal/modules/esm/resolve:932:10)
    at defaultResolve (node:internal/modules/esm/resolve:1056:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:654:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:603:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:586:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:242:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:135:49) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///Users/baranovxyz/oss/agentsync/dist/core/errors'
}

Node.js v22.13.1"
`;

exports[`CLI Output Snapshots > Error Messages > mcp sync without project config error matches snapshot 1`] = `
"node:internal/modules/esm/resolve:275
    throw new ERR_MODULE_NOT_FOUND(
          ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/Users/baranovxyz/oss/agentsync/dist/core/errors' imported from /Users/baranovxyz/oss/agentsync/dist/core/audit.js
    at finalizeResolution (node:internal/modules/esm/resolve:275:11)
    at moduleResolve (node:internal/modules/esm/resolve:932:10)
    at defaultResolve (node:internal/modules/esm/resolve:1056:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:654:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:603:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:586:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:242:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:135:49) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///Users/baranovxyz/oss/agentsync/dist/core/errors'
}

Node.js v22.13.1"
`;

exports[`CLI Output Snapshots > Error Messages > missing MCP registry error matches snapshot 1`] = `
"node:internal/modules/esm/resolve:275
    throw new ERR_MODULE_NOT_FOUND(
          ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/Users/baranovxyz/oss/agentsync/dist/core/errors' imported from /Users/baranovxyz/oss/agentsync/dist/core/audit.js
    at finalizeResolution (node:internal/modules/esm/resolve:275:11)
    at moduleResolve (node:internal/modules/esm/resolve:932:10)
    at defaultResolve (node:internal/modules/esm/resolve:1056:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:654:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:603:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:586:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:242:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:135:49) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///Users/baranovxyz/oss/agentsync/dist/core/errors'
}

Node.js v22.13.1"
`;

exports[`CLI Output Snapshots > Error Messages > unknown command error matches snapshot 1`] = `
"node:internal/modules/esm/resolve:275
    throw new ERR_MODULE_NOT_FOUND(
          ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/Users/baranovxyz/oss/agentsync/dist/core/errors' imported from /Users/baranovxyz/oss/agentsync/dist/core/audit.js
    at finalizeResolution (node:internal/modules/esm/resolve:275:11)
    at moduleResolve (node:internal/modules/esm/resolve:932:10)
    at defaultResolve (node:internal/modules/esm/resolve:1056:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:654:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:603:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:586:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:242:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:135:49) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///Users/baranovxyz/oss/agentsync/dist/core/errors'
}

Node.js v22.13.1"
`;

exports[`CLI Output Snapshots > Init Command Help > init --help output matches snapshot 1`] = `
"Usage: agentsync init [options]

Initialize AgentSync in the current project

Options:
  -t, --template <template>  Template to use for AGENTS.md
  -h, --help                 display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp --help output matches snapshot 1`] = `
"Usage: agentsync mcp [options] [command]

Manage MCP servers

Options:
  -h, --help      display help for command

Commands:
  add <name>      Add a new MCP server
  remove <name>   Remove an MCP server
  list            List all MCP servers
  sync [options]  Sync MCP configurations to tools
  help [command]  display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp add --help output matches snapshot 1`] = `
"Usage: agentsync mcp add [options] <name>

Add a new MCP server

Options:
  -h, --help  display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp list --help output matches snapshot 1`] = `
"Usage: agentsync mcp list [options]

List all MCP servers

Options:
  -h, --help  display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp remove --help output matches snapshot 1`] = `
"Usage: agentsync mcp remove [options] <name>

Remove an MCP server

Options:
  -h, --help  display help for command"
`;

exports[`CLI Output Snapshots > MCP Commands Help > mcp sync --help output matches snapshot 1`] = `
"Usage: agentsync mcp sync [options]

Sync MCP configurations to tools

Options:
  -t, --tool <tool>  Sync only to a specific tool
  -d, --dry-run      Preview changes without writing files
  -h, --help         display help for command"
`;
